examples/test/testpolicy3757.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3757
  namespace: namespace84
spec:
  podSelector:
    matchLabels:
      key20: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value5
          key20: value33
          key27: value39
      podSelector:
        matchLabels:
          key14: value12
          key38: value8
